Added Gradle import instructions & more `.gitignore`